[project]
name = "currency"
version = "0.1"
authors = [{ name = "Vítor dos Santos Araujo", email = "vitoraraujo@tuta.com" }]
readme = "README.md"
dynamic = ["dependencies"]
requires-python = ">=3.11"

[project.optional-dependencies]
tests = ["flake8", "mypy", "pytest", "pytest-cov", "pandas"]
docs = ["sphinx", "myst_parser", "furo"]

[build-system]
requires = ["hatchling", "hatch-requirements-txt"]
build-backend = "hatchling.build"

[tool.hatch.metadata.hooks.requirements_txt]
files = ["requirements.txt"]

[tool.pytest.ini_options]
pythonpath = "src"

[tool.ruff]
line-length = 79
